--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@
   color: #232233;
   font-size: 25px;
   font-weight: 600;
-  line-height: 37.5px; /* 150% */
+  line-height: 1.5;
   text-transform: uppercase;
   text-align: center;
   margin-bottom: 18px;
@@ -44,12 +44,21 @@
 }
 
 .app-about-img-wrap {
+  position: relative;
   outline: 1px solid green;
-  /* margin: 0 auto; */
-  text-align: center;
 }
 
 .app-about-img {
   outline: 1px solid orange;
   margin: 0 auto;
+  z-index: 1000;
+}
+
+.app-about-elipse {
+  position: absolute;
+  bottom: -15px;
+  left: 53px;
+  /* transform: translateY(50%); */
+  fill: #fff;
+  filter: drop-shadow(0px 1px 10px rgba(0, 0, 0, 0.1));
 }
