--- a/styles.css
+++ b/styles.css
@@ -39,26 +39,42 @@
   text-align: center;
   font-size: 16px;
   font-weight: 400;
-  line-height: 24px; /* 150% */
+  line-height: 1.5;
   margin-bottom: 40px;
 }
 
 .app-about-img-wrap {
-  position: relative;
+  /* position: relative; */
   outline: 1px solid green;
 }
 
 .app-about-img {
+  position: relative;
   outline: 1px solid orange;
   margin: 0 auto;
-  z-index: 1000;
+  z-index: 1;
 }
 
 .app-about-elipse {
-  position: absolute;
-  bottom: -15px;
-  left: 53px;
-  /* transform: translateY(50%); */
+  width: 100%;
+  margin: 0 auto;
+  /* transform: translateY(-50%); */
   fill: #fff;
   filter: drop-shadow(0px 1px 10px rgba(0, 0, 0, 0.1));
+}
+
+.ellipse {
+  margin: 0 auto;
+  width: 212px;
+  height: 71px;
+  transform: translateY(-50%);
+  background-color: #fff;
+  border-radius: 50%;
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
+}
+
+@media screen and (max-width: 320px) {
+  .app-about-elipse {
+    /* left: 30px; */
+  }
 }
