--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,8 @@
   margin: 0 auto;
 }
 
+/* ============================== App About ========================= */
+
 .app-about-title {
   color: #232233;
   font-size: 25px;
@@ -58,7 +60,7 @@
   z-index: 1;
 }
 
-.app-about-elipse {
+.app-about-ellipse {
   margin: 0 auto;
   width: 212px;
   height: 71px;
@@ -110,8 +112,10 @@
   line-height: 1.5;
 }
 
+/* ============================== App Features ========================= */
+
 .features .container {
-  background: #423fd9;
+  background: #5956e9;
   background-image: url(/images/app-features/app-features-background-mob.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -151,7 +155,6 @@
 
 .app-features-list-item:not(:last-child):not(:nth-child(3)) {
   margin-bottom: 40px;
-  /* outline: 1px solid rgb(58, 184, 33); */
 }
 
 .app-features-list-item-icon {
@@ -182,4 +185,59 @@
 }
 
 .app-features-list-item.image {
+}
+
+/* ============================== App Interface ========================= */
+.app-interface-title {
+  color: #232233;
+  text-align: center;
+  font-size: 25px;
+  font-weight: 600;
+  line-height: 1.5;
+  text-transform: uppercase;
+  margin-bottom: 18px;
+}
+
+.app-interface-text {
+  color: #6c6c72;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  margin-bottom: 40px;
+}
+
+.app-interface-slider {
+  text-align: center;
+}
+
+.app-interface-slide {
+  margin-bottom: 60px;
+}
+
+.app-interface-slide img {
+  margin: 0 auto;
+}
+
+.app-interface-slider-dots {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
+.app-interface-slider-dot {
+  /* display: inline-flex; */
+  height: 16px;
+  width: 16px;
+  border-radius: 50px;
+  background-color: #5956e9;
+}
+
+.app-interface-slider-dot-active {
+  height: 16px;
+  width: 16px;
+  border-radius: 50px;
+  background-color: #5956e9;
+  box-shadow: 0 0 0 3px #fff, 0 0 0 4px #5956e9;
 }
