--- a/styles.css
+++ b/styles.css
@@ -16,17 +16,16 @@
   -webkit-text-size-adjust: 100%;
 }
 
-/* ============================ MEDIA ===================================== */
+/* ============================ Media ===================================== */
 @media screen and (max-width: 320px) {
   .selector {
     /* property */
   }
 }
 
-/* ============================ MEDIA ===================================== */
+/* ============================ End Media ===================================== */
 
 .container {
-  outline: 1px solid tomato;
   max-width: 375px;
   /* padding: 0 20px; */
   padding: 60px 16px;
@@ -68,9 +67,6 @@
   background-color: #fff;
   border-radius: 50%;
   box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
-}
-
-.app-about-list {
 }
 
 .app-about-list-item {
@@ -184,9 +180,6 @@
   box-shadow: 40px 40px 100px 0px rgba(24, 48, 63, 0.5);
 }
 
-.app-features-list-item.image {
-}
-
 /* ============================== App Interface ========================= */
 .app-interface-title {
   color: #232233;
@@ -227,14 +220,13 @@
 }
 
 .app-interface-slider-dot {
-  /* display: inline-flex; */
   height: 16px;
   width: 16px;
   border-radius: 50px;
   background-color: #5956e9;
 }
 
-.app-interface-slider-dot-active {
+.app-interface-slider-dot.active {
   height: 16px;
   width: 16px;
   border-radius: 50px;
