--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,23 @@
   margin: 0 auto;
 }
 
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding: 120px 40px;
+    position: relative;
+  }
+}
+
+@media (min-width: 1440px) {
+  .container {
+    max-width: 1440px;
+    padding: 120px 135px;
+  }
+}
+
+/* ============================== App About ========================= */
+/* ============================== App About ========================= */
 /* ============================== App About ========================= */
 
 .app-about-title {
@@ -125,10 +142,6 @@
 }
 
 @media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-    padding: 120px 40px;
-  }
   .app-about-wrapper {
     display: flex;
     justify-content: center;
@@ -168,10 +181,6 @@
 }
 
 @media (min-width: 1440px) {
-  .container {
-    max-width: 1440px;
-    padding: 120px 135px;
-  }
   .app-about-ellipse {
     margin-top: -50px;
   }
@@ -212,6 +221,8 @@
   }
 }
 
+/* ============================== App Features ========================= */
+/* ============================== App Features ========================= */
 /* ============================== App Features ========================= */
 
 .features .container {
@@ -284,6 +295,61 @@
   box-shadow: 40px 40px 100px 0px rgba(24, 48, 63, 0.5);
 }
 
+/* =========================== App Features Adaptive ================== */
+
+@media (min-width: 768px) {
+  .app-features-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+
+  .app-features-list-item {
+    /* width: 48%;  */
+    /* max-width: 213px; */
+    margin-bottom: 20px;
+  }
+
+  .app-features-list-item:nth-child(1),
+  .app-features-list-item:nth-last-child(1) {
+    width: 100%;
+  }
+
+  .app-features-list-item:nth-child(1) .app-features-list-item-descr {
+    max-width: 223px;
+    margin: 0 auto;
+  }
+
+  .app-features-list-item:nth-last-child(1) .app-features-list-item-descr {
+    max-width: 297px;
+    margin: 0 auto;
+  }
+
+  .app-features-list-item:nth-child(4) {
+    width: 100%;
+  }
+
+  .app-features-list-item:nth-child(2),
+  .app-features-list-item:nth-child(3),
+  .app-features-list-item:nth-child(5),
+  .app-features-list-item:nth-child(6) {
+    max-width: 225px;
+  }
+
+  .app-features-list-item-img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    max-width: 214px;
+    margin: 20px auto;
+  }
+}
+
+/* ============================== App Interface ========================= */
+/* ============================== App Interface ========================= */
 /* ============================== App Interface ========================= */
 .app-interface-title {
   color: #232233;
